--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-   
+    
     <nav class="navbar navbar-light myNavBar d-flex justify-content-around">
         <span class="navbar-brand mb-0 h1 myName" style="color: #fff">John Julius-Giles Eastwood</span>
         <div class="d-flex justify-content-end">
-            <a class="navbar-brand" href="index.html">About Me</a>
-            <a class="navbar-brand" href="portfolio.html">Portfolio</a>
-            <a class="navbar-brand" href="contact.html">Contact</a>
+            <a class="sideLink" href="index.html">About Me</a>
+            <a class="middleLink" href="portfolio.html">Portfolio</a>
+            <a class="sideLink" href="contact.html">Contact</a>
         </div>
     </nav>
          
@@ -53,6 +53,12 @@
     </div>
 
     <div class="myFooter">
+        <div class="row">
+            <div class="col-md-12">
+                <a class="linkedIn logo" href="https://www.linkedin.com/in/john-eastwood-40b207173/"><img class="logo" height="59px" width="48px" alt="linkedin logo" src="assets/images/In-White-48px-TM.png"></a>
+                <a class="gitHub logo" href="https://github.com/jjge732"><img class="logo" alt="github logo" height="48px" width="48px" src="assets/images/GitHub-Mark-Light-64px.png"></a>                
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-12">
                 Copyright &copy;
