added missing snippet

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                     <img src="assets\images\lorem_pixel_320x240\img-1.jpg" class="img-fluid myImage" alt="Responsive image 1">
                     <figcaption>Hangman</figcaption>
                 </a>
-                <a class="anchor2 col-md-6" href="assets/images/lorem_pixel_320x240/img-2.jpg" target="_blank">
+                <a class="anchor2 col-md-6" href="assets/images/lorem_pixel_320x240/img-2.jpg" download target="_blank">
                     <img src="assets\images\lorem_pixel_320x240\img-2.jpg" class="img-fluid myImage" alt="Responsive image 1">
                     <figcaption>RPG Game</figcaption>
                 </a>
