added functionality to first two portfolio links

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,21 +30,21 @@
             </h2>
             <hr class="my-4">
             <div class="row gridMkr">
-                <a class="anchor1 col-md-6" href="assets/images/lorem_pixel_320x240/img-1.jpg" download target="_blank">
+                <a class="anchor1 col-md-6" href="https://jjge732.github.io/Word-Guess-Game/" target="_blank">
                     <img src="assets\images\lorem_pixel_320x240\img-1.jpg" class="img-fluid myImage" alt="Responsive image 1">
                     <figcaption>Hangman</figcaption>
                 </a>
-                <a class="anchor2 col-md-6" href="assets/images/lorem_pixel_320x240/img-2.jpg" download target="_blank">
+                <a class="anchor2 col-md-6" href="https://jjge732.github.io/unit-4-game/" target="_blank">
                     <img src="assets\images\lorem_pixel_320x240\img-2.jpg" class="img-fluid myImage" alt="Responsive image 1">
                     <figcaption>RPG Game</figcaption>
                 </a>
             </div>
             <div class="row gridMkr">
-                <a class="anchor3 col-md-6" href="assets/images/lorem_pixel_320x240/img-3.jpg" download target="_blank">
+                <a class="anchor3 col-md-6" href="assets/images/lorem_pixel_320x240/img-3.jpg" target="_blank">
                     <img src="assets\images\lorem_pixel_320x240\img-3.jpg" class="img-fluid myImage" alt="Responsive image 1">
                     <figcaption>Trivia Game</figcaption>
                 </a>
-                <a class="anchor4 col-md-6" href="assets/images/lorem_pixel_320x240/img-4.jpg" download target="_blank">
+                <a class="anchor4 col-md-6" href="assets/images/lorem_pixel_320x240/img-4.jpg" target="_blank">
                     <img src="assets\images\lorem_pixel_320x240\img-4.jpg" class="img-fluid myImage" alt="Responsive image 1">
                     <figcaption>Rutgers Info Widget</figcaption>
                 </a>
