added link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="row gridMkr">
-                <a class="anchor3 col-md-6" href="assets/images/lorem_pixel_320x240/img-3.jpg" target="_blank">
+                <a class="anchor3 col-md-6" href="https://jjge732.github.io/TriviaGame/" target="_blank">
                     <img src="assets\images\lorem_pixel_320x240\img-3.jpg" class="img-fluid myImage" alt="Responsive image 1">
                     <figcaption>Trivia Game</figcaption>
                 </a>
