--- a/portfolio.html
+++ b/portfolio.html
@@ -44,9 +44,9 @@
                     <img src="assets\images\lorem_pixel_320x240\img-3.jpg" class="img-fluid myImage" alt="Responsive image 1">
                     <figcaption>Trivia Game</figcaption>
                 </a>
-                <a class="anchor4 col-md-6" href="assets/images/lorem_pixel_320x240/img-4.jpg" target="_blank">
+                <a class="anchor4 col-md-6" href="https://jjge732.github.io/giphy/" target="_blank">
                     <img src="assets\images\lorem_pixel_320x240\img-4.jpg" class="img-fluid myImage" alt="Responsive image 1">
-                    <figcaption>Rutgers Info Widget</figcaption>
+                    <figcaption>Gif Generator</figcaption>
                 </a>
             </div>
             <div class="row gridMkr">
